@@ -5,6 +5,7 @@ TO RELEASE IMMEDIATELY:
  - add your changes -
  
 NOT TO BE RELEASED YET:
+stefan; 24 dec 2003: bug 661 fixed (whitespace in field definitions), fixed file also contains unique keyword support, so it needs to wait for that to be released
 stefan; 18 nov 2003: bug 638 fixed (Makumba altered InnoDB tables to InnoDB on MySQL 4.1)
 cristi; 6 nov 2003: published FieldDefinition.getNameFor(int)
 cristi; 25 oct 2003: org.makumba.db.sql.ParameterAssigner had a bug when wrong parameters are passed to a query, i put in a fix in revision 2.2, it's not tested enough, on the other hand it won't occur in working pages anyway
